--- a/ChengYuDaHuiGame/project.properties
+++ b/ChengYuDaHuiGame/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../ADLib_360
-android.library.reference.2=../../../workspace_android/appcompat_v7
+android.library.reference.1=..\\ADLib_360
+android.library.reference.2=..\\ZhaoYanCommunicationLib
 manifestmerger.enabled=true
-android.library.reference.3=../ZhaoYanCommunicationLib
+android.library.reference.3=../../../Codes/SupportLibraryV7AppCompat
