--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.zhaoyan.juyou.game.chengyudahui.activity.LauncherActivity"
+            android:name="com.zhaoyan.juyou.game.chengyudahui.activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/LauncherTheme" >
