--- a/ChengYuDaHuiGame/AndroidManifest.xml
+++ b/ChengYuDaHuiGame/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhaoyan.juyou.game.chengyudahui"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="Dev_20141217_0001" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -18,7 +18,7 @@
     <application
         android:name="com.zhaoyan.juyou.game.chengyudahui.JuYouApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher1"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
